# acled_data

./: .gitignore  DESCRIPTION  FINAL_SUMMARY.md  LICENSE  NAMESPACE  README.md
R/: read_acled.R
docs/: CLEANUP_SUMMARY.txt  DATA_COMPLETENESS_GUIDE.md  FOLDER_STRUCTURE.txt  ORGANIZATION_SUMMARY.txt  QUICK_START.md
notebooks/: copy_to_volume.py  copy_to_volume.r  daily_acled_update.r  monthly_acled_refresh.r
python/: pyproject.toml
python/acleddata/: __init__.py  acled.py
scripts/: acled_country_splitter.R  acled_incremental_updater.R  check_acled_data.R  read_acled_databricks.R  schedule_acled_update.ps1  update_acled.R  update_acled_scheduled.bat
scripts/archive/: migrate_to_new_structure.R
